--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,123 +1,162 @@
 /****Form****/
-
-#form {
-padding-top: 14px;
-margin-bottom: 34px;
+.btn-red {
+    background:#FF2525;
+    font-size:16px;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border: 1px solid #d4d4d4;
+    padding: 4px 12px 5px;
+    width: 100%;
+    height: 29px;
+    float:left;
+    font: 14px/20px  Arial, Helvetica, sans-serif;
+    color: #fff;
+    box-sizing: border-box;
+    transition: 0.5s ease;
+    -moz-box-sizing: border-box; /*Firefox 1-3*/
+    -webkit-box-sizing: border-box; /* Safari */
 }
 
-#form input {
-	 border: 1px solid #d4d4d4;
-	 	 padding: 4px 12px 5px;
-	background-color: #fff;
+.btn-red:hover {
+    background:#FF5C5C;   
+}
 
-	width: 100%;
-	height: 29px;
-	float:left;
-	font: 14px/20px  Arial, Helvetica, sans-serif;
-	color:#a1a1a1;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box; /*Firefox 1-3*/
-	-webkit-box-sizing: border-box; /* Safari */
+.btn-grey {
+    background:#8C8C8C;
+    font-size:16px;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border: 1px solid #d4d4d4;
+    padding: 4px 12px 5px;
+    width: 100%;
+    height: 29px;
+    float:left;
+    font: 14px/20px  Arial, Helvetica, sans-serif;
+    color: #fff;
+    box-sizing: border-box;
+    transition: 0.5s ease;
+    -moz-box-sizing: border-box; /*Firefox 1-3*/
+    -webkit-box-sizing: border-box; /* Safari */
+}
+
+.btn-grey:hover {
+    background:#B5B1B1;   
+}
+
+#form {
+    padding-top: 14px;
+    margin-bottom: 34px;
+}
+
+.field {
+    border: 1px solid #d4d4d4;
+    padding: 4px 12px 5px;
+    background-color: #fff;
+    width: 100%;
+    height: 29px;
+    float:left;
+    font: 14px/20px  Arial, Helvetica, sans-serif;
+    color: #d4d4d4;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box; /*Firefox 1-3*/
+    -webkit-box-sizing: border-box; /* Safari */
 }
 
 #form textarea {
-	height: 269px;
-	overflow: auto;
-	background-color: #fff;
-	 border: 1px solid #d4d4d4;
-	 	 padding: 7px 12px 8px;
-	width: 100%;
-	position: relative;
-	resize:none;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box; /*Firefox 1-3*/
-	-webkit-box-sizing: border-box; /* Safari */
-	float:left;
-	font: 14px/20px  Arial, Helvetica, sans-serif;
-	color:#a1a1a1;
-	margin: 0;
-	
+    height: 269px;
+    overflow: auto;
+    background-color: #fff;
+    border: 1px solid #d4d4d4;
+    padding: 7px 12px 8px;
+    width: 100%;
+    position: relative;
+    resize:none;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box; /*Firefox 1-3*/
+    -webkit-box-sizing: border-box; /* Safari */
+    float:left;
+    font: 14px/20px  Arial, Helvetica, sans-serif;
+    color:#d4d4d4;
+    margin: 0;
+
 }
+
+
+
 #form label {
-	position:relative;
-	display: block;
-	min-height: 41px;
-	width: 220px;
-	clear: left;
-	float: left;
+    position:relative;
+    display: block;
+    min-height: 41px;
+    width: 220px;
+    clear: left;
+    float: left;
 }
-
-
-
-
-
 #form .error, #form .empty {
-	color: #FF0000;
-	display: none;
-	font-size: 10px;
-	line-height:14px;
-	width:auto;
-	position: absolute;
-	z-index: 999;
-	right: 5px;
-	top: 10px;
-	float:left;
+    color: #FF0000;
+    display: none;
+    font-size: 10px;
+    line-height:14px;
+    width:auto;
+    position: absolute;
+    z-index: 999;
+    right: 5px;
+    top: 10px;
+    float:left;
 }
 
 #form .error-empty {
-	display:none;
-	float:left;
+    display:none;
+    float:left;
 }
 
 .btns {
-	position:relative;
-	padding-top: 40px;
-	text-align: right;
+    position:relative;
+    padding-top: 40px;
+    text-align: right;
 
 }
-
-
 .btns a {
-	cursor: pointer;
-	margin: 0;
-	text-transform: uppercase;
+    cursor: pointer;
+    margin: 0;
+    text-transform: uppercase;
 }
-
 .btns a+a {
-	margin-left: 30px;
+    margin-left: 30px;
 }
 
 #form .message {
-	width: 100%;
+    width: 100%;
 }
 
 #form .btns span {
-	display: inline-block;
-	width: 13px;
+    display: inline-block;
+    width: 13px;
 }
 
 
 .message br {
-	height: 0;
-	line-height: 0;
+    height: 0;
+    line-height: 0;
 }
 
 #form .success {
-	display: none;
-	position: absolute;
-	width: 220px;
-	background-color: #fff;
-border: 1px solid #d4d4d4;
-		text-align: center;
-	padding: 20px 10px;
-	z-index: 999;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box; /*Firefox 1-3*/
-	-webkit-box-sizing: border-box; /* Safari */
+    display: none;
+    position: absolute;
+    width: 220px;
+    background-color: #fff;
+    border: 1px solid #d4d4d4;
+    text-align: center;
+    padding: 20px 10px;
+    z-index: 999;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box; /*Firefox 1-3*/
+    -webkit-box-sizing: border-box; /* Safari */
 }
 
 
 
 .success_wrapper {
-	position: relative;	
+    position: relative;	
 }
