--- a/public/css/form.css
+++ b/public/css/form.css
@@ -22,6 +22,29 @@
     background:#FF5C5C;   
 }
 
+.btn-red-gundek {
+    background:#FF2525;
+    font-size:16px;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border: 1px solid #d4d4d4;
+    padding: 4px 12px 5px;
+    width: 20%;
+    height: 29px;
+    float:left;
+    font: 14px/20px  Arial, Helvetica, sans-serif;
+    color: #fff;
+    box-sizing: border-box;
+    transition: 0.5s ease;
+    -moz-box-sizing: border-box; /*Firefox 1-3*/
+    -webkit-box-sizing: border-box; /* Safari */
+}
+
+.btn-red-gundek:hover {
+    background:#FF5C5C;   
+}
+
 .btn-grey {
     background:#8C8C8C;
     font-size:16px;
@@ -58,7 +81,7 @@
     height: 29px;
     float:left;
     font: 14px/20px  Arial, Helvetica, sans-serif;
-    color: #d4d4d4;
+    color: #B5B1B1;
     box-sizing: border-box;
     -moz-box-sizing: border-box; /*Firefox 1-3*/
     -webkit-box-sizing: border-box; /* Safari */
