--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,7 @@ text-decoration:none;
 body {
 	font: 14px/20px  Arial, Helvetica, sans-serif;
 	color:#a1a1a1;
-	background-color: #FF3737;
+	background-color: #d7d7d7;
 	position:relative;
 	min-width:960px;
 
