--- a/public/css/superfish.css
+++ b/public/css/superfish.css
@@ -39,7 +39,7 @@ nav{ position:relative;padding: 0px 0 0 0;}
 
 
 .sf-menu>li.sfHover>a, .sf-menu>li.current>a, .sf-menu>li:hover>a:hover {
-	background-color: #C30000;
+	background-color: #FF3737;
 }
 
 
