--- a/public/css/style.css
+++ b/public/css/style.css
@@ -510,11 +510,11 @@ footer {
 	display: block;
 	padding: 23px 0 ;
 	font-size: 12px;
-	color: #d7d7d7;
+	color: #000;
 }
 
 footer a {
-        color: #A4A4A4;
+        color: #a1a1a1;
 }
 footer a:hover {
 	color: #E50000;
