--- a/public/css/camera.css
+++ b/public/css/camera.css
@@ -1,269 +1,302 @@
 
 
- /**************************
+/**************************
 *
 *	GENERAL
 *
 **************************/
 
 .slider_wrapper {
-	border-bottom: 0;
-	z-index: 999;
-	z-index: 0;
-	position: relative;
-	overflow: hidden;
+    border-bottom: 0;
+    z-index: 999;
+    z-index: 0;
+    position: relative;
+    overflow: hidden;
 }
 
 .camera_target_content {
-	overflow: visible !important;
+    overflow: visible !important;
 
 }
 
 .camera_wrap {
-	overflow: hidden;
-	display: none;
-	position: relative;
-	position: static;
-	overflow: visible !important;
-	z-index: 0;
-	margin-bottom: 0 !important;
+    overflow: hidden;
+    display: none;
+    position: relative;
+    position: static;
+    overflow: visible !important;
+    z-index: 0;
+    margin-bottom: 0 !important;
 }
 
 .camera_wrap img {
-	max-width: 10000px;
+    max-width: 10000px;
 }
 
 .camera_fakehover {
-	height: 100%;
-	min-height: 60px;
-	position: static;
-	width: 100%;
-	z-index: 990;
+    height: 100%;
+    min-height: 60px;
+    position: static;
+    width: 100%;
+    z-index: 990;
 }
 .camera_wrap {
-	width: 100%;
+    width: 100%;
 }
 .camera_src {
-	display: none;
+    display: none;
 }
 .cameraCont, .cameraContents {
-	height: 100%;
-	position: relative;
-	width: 100%;
-	z-index: 1;
+    height: 100%;
+    position: relative;
+    width: 100%;
+    z-index: 1;
 }
 .cameraSlide {
-	bottom: 0;
-	left: 0;
-	position: absolute;
-	right: 0;
-	top: 0;
-	width: 100%;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
 }
 .cameraContent {
-	bottom: 0;
-	display: none;
-	left: 0;
-	position: absolute;
-	right: 0;
-	top: 0;
-	width: 100%;
+    bottom: 0;
+    display: none;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
 }
 .camera_target {
-	bottom: 0;
-	height: 100%;
-	left: 0;
-	overflow: hidden;
-	position: absolute;
-	right: 0;
-	text-align: left;
-	top: 0;
-	width: 100%;
-	z-index: 0;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    text-align: left;
+    top: 0;
+    width: 100%;
+    z-index: 0;
 }
 .camera_overlayer {
-	bottom: 0;
-	height: 100%;
-	left: 0;
-	overflow: hidden;
-	position: absolute;
-	right: 0;
-	top: 0;
-	width: 100%;
-	z-index: 0;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 0;
 }
 .camera_target_content {
-	bottom: 0;
-	left: 0;
-	overflow: hidden;
-	position: absolute;
-	right: 0;
-	top: 0;
-	z-index: 2;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 2;
 }
 .camera_target_content .camera_link {
     background: url(../images/blank.gif);
-	display: block;
-	height: 100%;
-	text-decoration: none;
+    display: block;
+    height: 100%;
+    text-decoration: none;
 }
 .camera_loader {
     background: #fff url(../images/camera-loader.gif) no-repeat center;
-	background: rgba(255, 255, 255, 0.9) url(../images/camera-loader.gif) no-repeat center;
-	border: 1px solid #ffffff;
-	border-radius: 18px;
-	height: 36px;
-	left: 50%;
-	overflow: hidden;
-	position: absolute;
-	margin: -18px 0 0 -18px;
-	top: 50%;
-	width: 36px;
-	z-index: 3;
+    background: rgba(255, 255, 255, 0.9) url(../images/camera-loader.gif) no-repeat center;
+    border: 1px solid #ffffff;
+    border-radius: 18px;
+    height: 36px;
+    left: 50%;
+    overflow: hidden;
+    position: absolute;
+    margin: -18px 0 0 -18px;
+    top: 50%;
+    width: 36px;
+    z-index: 3;
 }
 
 .camera_nav_cont {
-	height: 65px;
-	overflow: hidden;
-	position: absolute;
-	right: 9px;
-	top: 15px;
-	width: 120px;
-	z-index: 4;
+    height: 65px;
+    overflow: hidden;
+    position: absolute;
+    right: 9px;
+    top: 15px;
+    width: 120px;
+    z-index: 4;
 }
 .camerarelative {
-	overflow: hidden;
-	position: relative;
+    overflow: hidden;
+    position: relative;
 }
 .imgFake {
-	cursor: pointer;
+    cursor: pointer;
 }
 .camera_commands > .camera_stop {
-	display: none;	
+    display: none;	
 }
 
 
 .slide_wrapper .camera_prev{
-	background: url(../images/prevnext_bg.png) 0 0 repeat;
-	width: 70px;	
-	top: 0 !important;
-	height: auto !important;
-	bottom: 0;
-	left: -80px;
-	display: block;
-	position: absolute;
-	opacity: 1 !important;
-	transition: 0.5s ease;
-	-o-transition: 0.5s ease;
-	-webkit-transition: 0.5s ease;
+    background: url(../images/prevnext_bg.png) 0 0 repeat;
+    width: 70px;	
+    top: 0 !important;
+    height: auto !important;
+    bottom: 0;
+    left: -80px;
+    display: block;
+    position: absolute;
+    opacity: 1 !important;
+    transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
 }
 
 .slide_wrapper .camera_prev>span {
-	background: url(../images/prev.png) center 0 no-repeat;
-	top: 50%;
-		
-	margin-top: -10px;
-	position: absolute;
-	display: block;
-	height: 20px;
-	left: 0;
-	right: 0;
+    background: url(../images/prev.png) center 0 no-repeat;
+    top: 50%;
+
+    margin-top: -10px;
+    position: absolute;
+    display: block;
+    height: 20px;
+    left: 0;
+    right: 0;
 }
 
 .slide_wrapper .camera_next>span {
-	background: url(../images/next.png) center 0 no-repeat;
-	top: 50%;
-	margin-top: -10px;
-	position: absolute;
-	display: block;
-	left: 0;
-	right: 0;
-	height: 20px;
+    background: url(../images/next.png) center 0 no-repeat;
+    top: 50%;
+    margin-top: -10px;
+    position: absolute;
+    display: block;
+    left: 0;
+    right: 0;
+    height: 20px;
 }
 
 
 
 .slide_wrapper .camera_next {
-	background: url(../images/prevnext_bg.png) 0 0 repeat;
-	width: 70px;	
-	top: 0  !important;
-	bottom: 0;
-	height: auto !important;
+    background: url(../images/prevnext_bg.png) 0 0 repeat;
+    width: 70px;	
+    top: 0  !important;
+    bottom: 0;
+    height: auto !important;
 
-	right: -80px;
-	display: block;
-	position: absolute;
-	opacity: 1 !important;
-	transition: 0.5s ease;
-	-o-transition: 0.5s ease;
-	-webkit-transition: 0.5s ease;
+    right: -80px;
+    display: block;
+    position: absolute;
+    opacity: 1 !important;
+    transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
 }
 
 .camera_thumbs_cont {
-	z-index: 991;
-	width: 100% !important;
-	position: relative;
-	height: 82px;
+    z-index: 991;
+    width: 100% !important;
+    position: relative;
+    height: 82px;
 }
 
 
 .camera_thumbs_cont > div {
-	width: 100%;
-	position: relative;
-	height: 82px;
+    width: 100%;
+    position: relative;
+    height: 82px;
 
 }
 .camera_thumbs_cont ul {
-	width: auto !important;
-	padding-top: 13px;
-	overflow: hidden;
-	position: absolute;
-	background-color: #fff;
-	margin: 0 !important;
-	margin-left: 0px !important;
-	left: 201px !important;
-	right: 204px !important;
-	margin-top: -78px !important;
-	text-align: center;
+    width: auto !important;
+    padding-top: 13px;
+    overflow: hidden;
+    position: absolute;
+    background-color: #fff;
+    margin: 0 !important;
+    margin-left: 0px !important;
+    left: 201px !important;
+    right: 204px !important;
+    margin-top: -78px !important;
+    text-align: center;
 }
 .camera_thumbs_cont ul li {
-	background-color: #414141;
-	display: inline-block;
-	font-size: 0 !important;
-	width: 170px !important;
-	border: 1px solid #222426;
+    background-color: #414141;
+    display: inline-block;
+    font-size: 0 !important;
+    width: 170px !important;
+    border: 1px solid #222426;
 }
 
 .camera_thumbs_cont ul li+li  {
-	margin-left: 5px !important;
+    margin-left: 5px !important;
 }
 
 .camera_thumbs_cont ul li+li +li {
-	margin-left: 6px !important;
+    margin-left: 6px !important;
 }
 .camera_thumbs_cont ul li > img {
-	cursor: pointer;
-	vertical-align:bottom;
-	transition: 0.5s ease;
-	-o-transition: 0.5s ease;
-	-webkit-transition: 0.5s ease;
+    cursor: pointer;
+    vertical-align:bottom;
+    transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
 }
 .camera_clear {
-	display: block;
-	clear: both;
+    display: block;
+    clear: both;
 }
 .showIt {
-	display: none;
+    display: none;
 }
 .camera_clear {
-	clear: both;
-	display: block;
-	height: 1px;
-	margin: -1px 0 25px;
-	position: relative;
+    clear: both;
+    display: block;
+    height: 1px;
+    margin: -1px 0 25px;
+    position: relative;
 }
+.callbacks .caption {
 
-
+}
+.slide-text-info h1 {
+    background-color:rgba(0, 0, 0, 0.5);    
+    display: block;
+    position: absolute;
+    z-index: 2;
+    font-size: 60px;
+    line-height:60px;
+    color: #fff;
+    left: 60%;
+    right: 10%;
+    padding: 10px 20px;
+    margin: 0;
+    max-width: none;
+    top: 40%;
+}
+.slide-text-info p {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    font-size: 10px;
+    line-height:10px;
+    color: #fff;
+    left: 30%;
+    right: 30%;
+    padding: 10px 20px;
+    margin: 0;
+    max-width: none;
+    top: 40%;
+}
+div.slide-text-info {
+    margin-top: 4em;
+}
 
 
 /**************************
@@ -274,91 +307,91 @@
 /**************************
 
 .camera_pag  {
-	display: block;
-	position: absolute;
-	left: 50%;
-	margin-left: -23px;
-	bottom: 151px;
-	height: 12px;
-	overflow: hidden;
-	float: left;	
-	z-index: 999;
-	text-align: left;
-	bottom: 58px;
+        display: block;
+        position: absolute;
+        left: 50%;
+        margin-left: -23px;
+        bottom: 151px;
+        height: 12px;
+        overflow: hidden;
+        float: left;	
+        z-index: 999;
+        text-align: left;
+        bottom: 58px;
 
 }
 
 .camera_pag_ul {
- 	overflow: hidden;
+        overflow: hidden;
 
 
 }
 
 .camera_pag ul li {
-	float: left;
+        float: left;
 }
 
 .camera_pag ul li+li {
-	margin-left: 5px;
+        margin-left: 5px;
 }
 
 .camera_pag ul li span {
-	display: block;
-	width: 12px;
-	background: url(../images/pagination.png) right 0 no-repeat;
-	height: 12px;
-	overflow: hidden;
-	color: transparent;
-	text-indent: -100px;
+        display: block;
+        width: 12px;
+        background: url(../images/pagination.png) right 0 no-repeat;
+        height: 12px;
+        overflow: hidden;
+        color: transparent;
+        text-indent: -100px;
 }
 
 .camera_pag ul li:hover span, .camera_pag ul li.cameracurrent span {
-	background-position: 0 0;
-	cursor: pointer;
+        background-position: 0 0;
+        cursor: pointer;
 }
 
 **************************/
 
 
 .camera_prev {
-	display: block;
-	position: absolute;
-	width: 39px;
-	height: 39px;
-	z-index: 999;
-	background: url(../images/prevnext.png) 0 0 no-repeat;
-	bottom: 0px;
-	opacity: 1 !important;
-	transition: 0s ease;
-	-o-transition: 0s ease;
-	-webkit-transition: 0s ease;
-	cursor: pointer;
-	left: 40px;
-	top: 50%;
-	margin-top: -20px;
+    display: block;
+    position: absolute;
+    width: 39px;
+    height: 39px;
+    z-index: 999;
+    background: url(../images/prevnext.png) 0 0 no-repeat;
+    bottom: 0px;
+    opacity: 1 !important;
+    transition: 0s ease;
+    -o-transition: 0s ease;
+    -webkit-transition: 0s ease;
+    cursor: pointer;
+    left: 40px;
+    top: 50%;
+    margin-top: -20px;
 }
 
 
 .camera_next {
-	display: block;
-	position: absolute;
-	width: 39px;
-	height: 39px;
-	z-index: 999;
-	background: url(../images/prevnext.png) right 0 no-repeat;
-	bottom: 0px;
-	opacity: 1 !important;
-	transition: 0s ease;
-	-o-transition: 0s ease;
-	-webkit-transition: 0s ease;
-	cursor: pointer;
-	right: 40px;
-	top: 50%;
-	margin-top: -20px;
+    display: block;
+    position: absolute;
+    width: 39px;
+    height: 39px;
+    z-index: 999;
+    background: url(../images/prevnext.png) right 0 no-repeat;
+    bottom: 0px;
+    opacity: 1 !important;
+    transition: 0s ease;
+    -o-transition: 0s ease;
+    -webkit-transition: 0s ease;
+    cursor: pointer;
+    right: 40px;
+    top: 50%;
+    margin-top: -20px;
 }
 
 .camera_prev:hover,
 .camera_next:hover  {
-	opacity: 0.5 !important;
+    opacity: 0.5 !important;
 }
 
