--- a/public/css/camera.css
+++ b/public/css/camera.css
@@ -34,7 +34,7 @@
 }
 
 .camera_fakehover {
-    height: 100%;
+    height: 120px;
     min-height: 60px;
     position: static;
     width: 100%;
@@ -270,7 +270,7 @@
     display: block;
     position: absolute;
     z-index: 2;
-    font-size: 60px;
+    font-size: 40px;
     line-height:60px;
     color: #fff;
     left: 60%;
@@ -278,7 +278,7 @@
     padding: 10px 20px;
     margin: 0;
     max-width: none;
-    top: 40%;
+    top: 60%;
 }
 .slide-text-info p {
     display: block;
