--- a/public/css/form.css
+++ b/public/css/form.css
@@ -81,7 +81,7 @@
     height: 29px;
     float:left;
     font: 14px/20px  Arial, Helvetica, sans-serif;
-    color: #B5B1B1;
+    color: #8C8C8C;
     box-sizing: border-box;
     -moz-box-sizing: border-box; /*Firefox 1-3*/
     -webkit-box-sizing: border-box; /* Safari */
@@ -105,7 +105,6 @@
     margin: 0;
 
 }
-
 
 
 #form label {
