Insert Programs kelar dah

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -101,7 +101,7 @@
     -webkit-box-sizing: border-box; /* Safari */
     float:left;
     font: 14px/20px  Arial, Helvetica, sans-serif;
-    color:#d4d4d4;
+    color:#8C8C8C;
     margin: 0;
 
 }
