--- a/public/css/style.css
+++ b/public/css/style.css
@@ -559,11 +559,14 @@ blockquote .col2 {
 }
 
 a.gal img {
-    width: 100%;
+    height: 150px;    
+    width: 430px;
+    object-fit: cover;    
     transition: 0.5s ease;
     -o-transition: 0.5s ease;
     -webkit-transition: 0.5s ease;
 }
+
 a.gal:hover img {
     opacity: 0.76;
 }
