--- a/public/css/style.css
+++ b/public/css/style.css
@@ -558,10 +558,22 @@ blockquote .col2 {
     font-size: 18px;
 }
 
-a.gal img {
-    height: 150px;    
-    width: 430px;
-    object-fit: cover;    
+a.gal {
+    width: 90%;
+    height: 20%;
+    margin: 0px;
+    position: relative;
+    overflow: hidden;
+}
+
+.img {
+    display: block;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.12); /* order is important here*/
+    backface-visibility: hidden;
     transition: 0.5s ease;
     -o-transition: 0.5s ease;
     -webkit-transition: 0.5s ease;
